# blog

./: 404.html  CNAME  README.md  devbox.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
Negotiating/: Getting-to-yes.md
archive/2024/: index.html
archive/2025/: index.html
category/ai/: index.html
category/artificial-intelligence/: index.html
category/devops/: index.html
category/doc-failures/: index.html
category/local-development/: index.html
category/platform-engineering/: index.html
cultivating-your-local-garden-create-seedlings-with-dev-containers-and-devbox/: index.html
devops-with-the-app-code-the-final-boss/: index.html
devops-with-the-code-the-final-boss/: index.html
doc-failures-argocd-and-eks/: index.html
docs/: .authors.yml  index.md
docs/features/: glossary.md
docs/includes/: abbreviations.md  case-insensitive-abbreviations.md
docs/javascripts/: image-tooltips.js
docs/posts/: argocd-and-eks.md
docs/posts/DevOps/: the-final-barrier.md
docs/posts/GitOps-Migration-Series/: part1.md
docs/posts/Platform-Engineering/: ai-platform-eng.md
docs/posts/Principle-Horticulture/: Cultivating-Your-Local-Garden.md  (+1 more)
docs/stylesheets/: extra.css
dollars-and-devops/: dollars-and-devops.md  index.md
features/glossary/: index.html
includes/case-insensitive-abbreviations/: index.html
overrides/: main.html
overrides/partials/: comments.html  copyright.html
platform-engineers-nyc-introducing-canyon-the-ai-for-developer-self-service/: index.html
search/: search_index.json
(+2 files in other folders)
