[tool.poetry]
authors = ["Charles Dunda <s33dunda@gmail.com>"]
description = "Platform Engineering Blog Site"
name = "blog"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"
python = "^3.12"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
